# TDOA_SONAR

./: README.md
advantech_pci1714/: CMakeLists.txt  CMakeLists.txt~  package.xml
advantech_pci1714/launch/: local.launch
advantech_pci1714/msg/: Pingdata.msg
advantech_pci1714/nodes/: ping_plotter.py  sonar_handler.py
advantech_pci1714/src/: advantechDriver.cpp  test.cpp
advantech_pci1714/srv/: Hydrophone_locations_service.srv
advantech_pci1714_driver/: CMakeLists.txt  package.xml
advantech_pci1714_driver/libraries/: bdaqctrl.h
advantech_pci1714_driver/src/: advantechPCI1714Driver.cpp
advantech_pci1714_driver/srv/: Ping.srv
bags/2018FEB04/: 09m_000deg_2018-02-04-14-41-00.bag  10m_drift_2018-02-04-15-21-33.bag  10m_moving_2018-02-04-14-43-44.bag  10m_yaw_to_270deg_2018-02-04-15-20-31.bag  12m_drift_2018-02-04-15-22-30.bag  17m_080deg_2018-02-04-14-15-20.bag  17m_090deg_2018-02-04-14-23-11.bag  20m_000deg_2018-02-04-14-28-01.bag  20m_drift_2018-02-04-15-25-39.bag  20m_drift_2018-02-04-15-26-12.bag  20m_drift_2018-02-04-15-27-34.bag  20m_random_driving_2018-02-04-15-29-21.bag  20m_random_driving_2018-02-04-15-29-33.bag  20m_random_driving_2018-02-04-15-30-10.bag  20m_random_driving_2018-02-04-15-31-51.bag  23m_090deg_2018-02-04-14-29-20.bag  25m_180deg_2018-02-04-14-30-30.bag  30m_drift_2018-02-04-15-24-01.bag  43m_090deg_2018-02-04-14-35-43.bag  43m_180deg_2018-02-04-14-36-29.bag  43m_270deg_2018-02-04-14-33-46.bag  43m_moving_2018-02-04-14-38-06.bag  60m_000deg_2018-02-04-14-51-55.bag  60m_090deg_2018-02-04-14-52-38.bag  60m_270deg_2018-02-04-14-54-26.bag  64m_180deg_2018-02-04-14-53-32.bag  80m_090deg_2018-02-04-15-00-40.bag  80m_180deg_2018-02-04-15-01-11.bag  98m_010deg_2018-02-04-15-04-37.bag  driving_to_10m_2018-02-04-15-15-54.bag
bags/2018FEB04_Lake_Wauburg/: 100m_270deg_2018-02-04-15-03-32.bag  105m_180deg_2018-02-04-15-02-53.bag  10m_000deg_2018-02-04-15-18-04.bag  10m_00deg_not_moving_2018-02-04-14-42-57.bag  10m_090deg_2018-02-04-15-19-03.bag  10m_180deg_2018-02-04-15-20-07.bag  10m_270deg_2018-02-04-15-20-56.bag  10m_moving_2018-02-04-14-42-26.bag  10m_yaw_to_090deg_2018-02-04-15-18-40.bag  10m_yaw_to_180deg_2018-02-04-15-19-30.bag  130m_000deg_2018-02-04-15-13-24.bag  130m_000deg_2018-02-04-15-13-40.bag  17m_000deg_2018-02-04-14-22-09.bag  17m_180deg_2018-02-04-14-24-21.bag  20m_000_strafe_right_2018-02-04-15-33-42.bag  20m_000_strafe_right_2018-02-04-15-33-54.bag  20m_000_strafe_right_2018-02-04-15-34-06.bag  20m_drift_2018-02-04-15-23-07.bag  20m_drift_2018-02-04-15-25-55.bag  20m_drift_2018-02-04-15-28-00.bag  20m_drift_2018-02-04-15-28-17.bag  20m_random_driving_2018-02-04-15-29-01.bag  20m_random_driving_2018-02-04-15-29-45.bag  20m_random_driving_2018-02-04-15-29-58.bag  20m_random_driving_2018-02-04-15-30-22.bag  (+18 more)
tdoa_sonar_software/: CMakeLists.txt  package.xml
tdoa_sonar_software/launch/: condition_plot.launch  localization.launch
tdoa_sonar_software/msg/: Calculated_time_stamps.msg
tdoa_sonar_software/nodes/: cardinal.py  localization_service.py  phase_shift.py  plotting_for_paper.py  signal_conditioner_simple.py
tdoa_sonar_software/srv/: Localization_query.srv
(+9 files in other folders)
